umm actually added all the things this time

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 ################################################################################
 
 /turbo_catan/__pycache__
+/turbo_catan/.ipynb_checkpoints
+/.vs
